--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
 
     <form>
       <div class="habits">
-        <div class="habit" data-name="run">🏋️‍♂️</div>
+        <div class="habit" data-name="exercise">🏋️‍♂️</div>
         <div class="habit" data-name="water">🫗</div>
-        <div class="habit" data-name="food">🥕</div>
+        <div class="habit" data-name="food">🥦</div>
         <div class="habit" data-name="study">📖</div>
-        <div class="habit" data-name="programming">🚀</div>
+        <div class="habit" data-name="programming">💻</div>
+        <div class="habit" data-name="rest">🌾</div>
       </div>
 
       <div class="days"></div>
